Can't seem to restrict iOS from zooming out, stackoverflow says usual methods no longer supported. So we just made the background video much wider to make it look better when zoomed out on iOS. Note only effects iOS not andriod.

--- a/src/App.css
+++ b/src/App.css
@@ -12,14 +12,13 @@
 }
 
 
-
-
-
 html,
 body {
-  height: 100%;
-  background-color: white;
+
+  /* iOS prevent zooming - supposed to anyways not sure I noticed a benefit. */
+  touch-action: pan-x pan-y;
 }
+
 
 .servicesPageBody {
   background-color: black;
@@ -321,8 +320,8 @@ figcaption:hover {
 }
 
 #background-video {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
 
   position: fixed;
@@ -331,6 +330,7 @@ figcaption:hover {
   top: 0;
   bottom: 0;
   z-index: 0;
+
   /* background-image:
     repeating-radial-gradient(circle, rgba(0, 0, 0, 0.52), rgba(0, 0, 0, 0.55)); */
   /* background-image: url("../public/img/kitchen/kitchen8.jpg"); */
