--- a/src/textRightToLeft.css
+++ b/src/textRightToLeft.css
@@ -6,12 +6,11 @@ body {
 }
 
 .text-container {
-    width: 900px;
+    width: 40rem;
     margin: auto;
     overflow-x: hidden;
     height: 500px;
     margin-top: 65vh;
-    border: 20px solid red;
     /* border: 20px solid red; */
 
 
